testing  mvp bug on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -599,7 +599,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
     height: auto;
 }
